--- a/POEBulkTradeService/POEBulkTradeService.csproj
+++ b/POEBulkTradeService/POEBulkTradeService.csproj
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <UserSecretsId>dotnet-WorkerService1-aeceabdf-07ed-418a-9522-a1608fcbdaeb</UserSecretsId>
         <RootNamespace>WorkerService1</RootNamespace>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
@@ -15,5 +16,11 @@
         <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.0-preview.1.25080.5" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="System.Net.Http.Json" Version="10.0.0-preview.1.25080.5" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
     </ItemGroup>
 </Project>
